--- a/assets/site.scss
+++ b/assets/site.scss
@@ -17,8 +17,14 @@ body {
   margin: 0;
 }
 
-.marianne {
-  width: 118px;
-  transform: translateX(-12px) translateY(-12px);
-}
 
+header {
+  nav {
+    padding: 12px 16px;
+
+    .marianne {
+      width: 108px;
+      transform: translateX(-16px) translateY(-12px);
+    }
+  }
+}
