Ajoute le bouton du menu

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -5,9 +5,10 @@
 <main>
     <header>
         <nav>
-            <a href="/">
-                <img src="/assets/images/marianne-dark.svg" class="marianne"/>
-            </a>
+            <a href="/"><img src="/assets/images/marianne-dark.svg" class="marianne"/></a>
+            <button class="menu">
+                <img src="/assets/images/icone-menu.svg"/>
+            </button>
         </nav>
     </header>
     <div class="chapeau">
