--- a/assets/site.scss
+++ b/assets/site.scss
@@ -21,10 +21,28 @@ body {
 header {
   nav {
     padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
     .marianne {
       width: 108px;
       transform: translateX(-16px) translateY(-12px);
+    }
+
+    .menu {
+      background: transparent;
+      cursor: pointer;
+      border: 1px solid #ddd;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        width: 24px;
+        height: 24px;
+      }
     }
   }
 }
