--- a/assets/service.scss
+++ b/assets/service.scss
@@ -1,9 +1,19 @@
 ---
 ---
 .chapeau {
-  background: #f4f4f4;
+  background: #f4f4f4 url("/assets/images/motif-fond-service.png");
   padding: 24px 16px;
+
+  .fil-ariane {
+    margin-bottom: 24px;
+  }
+
   h1 {
-    margin: 0
+    margin: 0 0 16px;
+  }
+
+  .bouton {
+    margin-top: 24px;
+    margin-bottom: 40px;
   }
 }
