--- a/assets/site.scss
+++ b/assets/site.scss
@@ -39,10 +39,57 @@ header {
       display: flex;
       justify-content: center;
       align-items: center;
+
       img {
         width: 24px;
         height: 24px;
       }
     }
   }
+}
+
+.fil-ariane {
+  background: #f4f4f4;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
+
+  a {
+    color: var(--noir);
+  }
+}
+
+.badge {
+  justify-content: center;
+  border-radius: 8px;
+  background: #fed980;
+  text-align: center;
+  padding: 2px 8px;
+  color: var(--noir);
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  display: inline-flex;
+  align-items: center;
+  gap: 2px;
+}
+
+.badge.service:before {
+  content: "";
+  background-image: url("/assets/images/icone-service.svg");
+  width: 12px;
+  height: 12px;
+}
+
+.bouton {
+  display: flex;
+  justify-content: center;
+  border-radius: 8px;
+  background: #fed980;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  color: var(--noir);
+  font-weight: 500;
 }
