Affiche le menu latéral
...replié

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -24,6 +24,11 @@
         {{page.descriptionService}}
         <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
     </div>
+    <div class="menu-lateral">
+        <img class="menu" src="/assets/images/icone-menu-lateral.svg"/>
+        <span>De quoi s'agit-il ?</span>
+        <img class="chevron" src="/assets/images/icone-chevron-bas.svg" />
+    </div>
 </main>
 
 </body>
