Ajoute la section d’explication
... dans la partie « De quoi s’agit-il ? »

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -27,7 +27,13 @@
     <div class="menu-lateral">
         <img class="menu" src="/assets/images/icone-menu-lateral.svg"/>
         <span>De quoi s'agit-il ?</span>
-        <img class="chevron" src="/assets/images/icone-chevron-bas.svg" />
+        <img class="chevron" src="/assets/images/icone-chevron-bas.svg"/>
+    </div>
+    <div class="explication">
+        <img src="/assets/images/illustrations-services/{{ page.illustration }}"/>
+        <h2>De quoi s'agit-il ?</h2>
+        <span>{{ page.content }}</span>
+        <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
     </div>
 </main>
 
