--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -11,7 +11,7 @@
             </button>
         </nav>
     </header>
-    <div class="chapeau">
+    <section class="chapeau">
         <div class="fil-ariane">
             <a href="/">Accueil</a>
             <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
@@ -23,19 +23,19 @@
         <h1>{{page.nomDuService}}</h1>
         {{page.descriptionService}}
         <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
-    </div>
+    </section>
     <div class="menu-lateral">
         <img class="menu" src="/assets/images/icone-menu-lateral.svg"/>
         <span>De quoi s'agit-il ?</span>
         <img class="chevron" src="/assets/images/icone-chevron-bas.svg"/>
     </div>
-    <div class="explication">
+    <section class="explication">
         <img src="/assets/images/illustrations-services/{{ page.illustration }}"/>
         <h2>De quoi s'agit-il ?</h2>
         <span>{{ page.content }}</span>
         <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
-    </div>
-    <div class="cible">
+    </section>
+    <section class="cible">
         <h2>Qui peut utiliser ce service ?</h2>
         <span>{{ page.cibleService }}</span>
 
@@ -49,7 +49,7 @@
             </div>
             {% endfor %}
         </div>
-    </div>
+    </section>
 
 </main>
 
