--- a/assets/service.scss
+++ b/assets/service.scss
@@ -50,7 +50,7 @@
 
 .cible {
   padding: 0 16px;
-  margin-bottom: 40px;
+  margin-bottom: 8px;
 }
 
 h2 {
@@ -104,6 +104,82 @@ h2 {
       width: 16px;
       height: 16px;
       align-self: end;
+    }
+  }
+}
+
+.ressources {
+  padding: 0 16px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 32px;
+
+  .ressource {
+    border: 1px solid #ddd;
+
+    .illustration {
+      display: flex;
+      padding: 26px 22px 0;
+      background: #f4f4f4;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .contenu {
+      border-bottom: 4px solid #0d0c21;
+      padding: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+
+      h3 {
+        margin: 0;
+        padding:0;
+        font-size: .875rem;
+        line-height: 1.5rem;
+        font-weight: 400;
+      }
+
+      span {
+        font-weight: bold;
+        font-size: 1.125rem;
+        line-height: 1.5rem;
+      }
+
+      a {
+        display: flex;
+        align-items: center;
+        gap: 3px;
+        text-decoration: none;
+        font-size: 0.875rem;
+        line-height: 1.5rem;
+        color: var(--noir);
+        font-weight: bold;
+
+        &:after {
+          content: '';
+          background: url("/assets/images/icone-lien-externe.svg");
+          width: 16px;
+          height: 16px;
+          margin-left: auto;
+        }
+      }
+
+      .labels {
+        display: flex;
+        gap: 8px;
+
+        span {
+          border-radius: 12px;
+          background: #f4f4f4;
+          padding: 2px 8px;
+          font-size: 0.75rem;
+          line-height: 1.25rem;
+          font-weight: normal;
+        }
+      }
     }
   }
 }
