Ajoute le lien pour remonter en haut de page

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -3,7 +3,7 @@
 {% include head.html extra-css="/assets/service.css" %}
 <body>
 <main>
-    <header>
+    <header id="haut-de-page">
         <nav>
             <a href="/"><img src="/assets/images/marianne-dark.svg" class="marianne"/></a>
             <button class="menu">
@@ -72,6 +72,10 @@
             </div>
         </div>
         {% endfor %}
+    </section>
+
+    <section class="haut-de-page">
+        <a href="#haut-de-page">Haut de page</a>
     </section>
 
 </main>
