Ajoute le pied de page

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -78,6 +78,14 @@
         <a href="#haut-de-page">Haut de page</a>
     </section>
 
+    <footer>
+        <a href="#">Plan du site</a>
+        <a href="#">Mentions légales</a>
+        <a href="#">Politique de confidentialité</a>
+        <a href="#">Conditions générales</a>
+        <a href="#">Statistiques d'utilisation</a>
+    </footer>
+
 </main>
 
 </body>
