Rends le menu `sticky`

--- a/assets/service.scss
+++ b/assets/service.scss
@@ -24,6 +24,9 @@
   gap: 8px;
   padding: 16px;
   border: 1px solid #ddd;
+  background: white;
+  position: sticky;
+  top:0;
 
   img {
     width: 16px;
