--- a/assets/service.scss
+++ b/assets/service.scss
@@ -19,14 +19,40 @@
 }
 
 .menu-lateral {
-  display: flex;
-  align-items: center;
-  gap: 8px;
   padding: 16px;
   border: 1px solid #ddd;
   background: white;
   position: sticky;
-  top:0;
+  top: 0;
+
+  summary {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    &::marker {
+      content: '';
+    }
+
+    &::-webkit-details-marker {
+      display: none;
+    }
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+
+    li {
+      padding: 12px 16px;
+      border-bottom: 1px solid #ddd;
+
+      a {
+        text-decoration: none;
+        color : var(--noir);
+      }
+    }
+  }
 
   img {
     width: 16px;
