Navigue entre les sections via le menu

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,7 @@
   {% if include.extra-css %}
     <link rel="stylesheet" href="{{ include.extra-css | relative_url }}">
   {% endif %}
+  {% if include.extra-js %}
+    <script src="{{ include.extra-js | relative_url }}"></script>
+  {% endif %}
 </head>
