Adapte la page service en mode tablette

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -21,7 +21,7 @@
         </div>
         <span class="badge service">Service</span>
         <h1>{{page.nomDuService}}</h1>
-        {{page.descriptionService}}
+        <p>{{page.descriptionService}}</p>
         <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
     </section>
     <div class="menu-lateral">
