--- a/assets/service.scss
+++ b/assets/service.scss
@@ -5,8 +5,7 @@
 
 .chapeau {
   background: #f4f4f4 url("/assets/images/motif-fond-service.png");
-  padding: 24px 16px;
-
+  padding: 24px var(--gouttiere);
 
   p {
     margin: 0;
@@ -41,8 +40,18 @@
   }
 }
 
-.menu-lateral {
-  padding: 16px;
+.article {
+  display: flex;
+  flex-direction: column;
+
+  @include a-partir-de(lg) {
+    flex-direction: row;
+    gap: 32px;
+  }
+}
+
+.sommaire-replie {
+  padding: 16px var(--gouttiere);
   border: 1px solid #ddd;
   background: white;
   position: sticky;
@@ -52,7 +61,11 @@
     position: fixed;
     top: 0;
     height: 100vh;
-    width: calc(100% - 32px);
+    width: calc(100% - var(--gouttiere) * 2);
+  }
+
+  @include a-partir-de(lg) {
+    display: none;
   }
 
   details {
@@ -94,7 +107,6 @@
           padding-left: 16px;
           display: inline-block;
         }
-
       }
     }
 
@@ -110,8 +122,53 @@
 
 }
 
+.sommaire-deplie {
+  display: none;
+  width: 300px;
+  flex: 0 0 auto;
+
+  @include a-partir-de(lg) {
+    display: flex;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin-left: 24px;
+
+    li {
+      padding-top: 12px;
+      padding-bottom: 12px;
+
+      &.actif {
+        font-weight: bold;
+
+        a {
+          border-left: 2px solid #fed980;
+          padding-left: 14px;
+        }
+      }
+
+      a {
+        text-decoration: none;
+        color: var(--noir);
+        padding-left: 16px;
+        display: inline-block;
+      }
+    }
+  }
+}
+
+.contenu {
+  padding: 0 var(--gouttiere);
+
+  @include a-partir-de(lg){
+    padding-left: 0;
+  }
+}
+
 .explication {
-  padding: 40px 16px 8px;
+  padding: 40px 0 8px;
 
   img {
     width: 100%;
@@ -120,11 +177,15 @@
   .bouton {
     margin-top: 32px;
     margin-bottom: 0;
+    padding: 10px 24px;
+
+    @include a-partir-de(lg){
+      width: fit-content;
+    }
   }
 }
 
 .cible {
-  padding: 0 16px;
   margin-bottom: 8px;
 }
 
@@ -134,7 +195,7 @@ h2 {
   font-size: 1.5rem;
   line-height: 1.875rem;
 
-  @include  a-partir-de(md) {
+  @include a-partir-de(md) {
     font-size: 2rem;
     line-height: 2.5rem;
   }
@@ -154,7 +215,7 @@ h2 {
   border: 1px solid #ddd;
   border-radius: 8px;
 
-  @include a-partir-de(md){
+  @include a-partir-de(md) {
     width: 320px;
   }
 
@@ -194,7 +255,6 @@ h2 {
 }
 
 .ressources {
-  padding: 0 16px;
   display: flex;
   flex-direction: column;
   margin-bottom: 32px;
@@ -278,7 +338,6 @@ h2 {
 .haut-de-page {
   margin: 0 auto 40px;
   text-align: center;
-  padding: 0 16px;
 
   @include a-partir-de(md) {
     text-align: left;
@@ -305,7 +364,7 @@ h2 {
 
 footer {
   border-top: 2px solid var(--noir);
-  padding: 16px 16px 24px;
+  padding: 16px var(--gouttiere) 24px;
   display: flex;
   flex-direction: column;
   gap: 16px;
