--- a/assets/service.scss
+++ b/assets/service.scss
@@ -126,9 +126,12 @@
   display: none;
   width: 300px;
   flex: 0 0 auto;
+  align-self: flex-start;
 
   @include a-partir-de(lg) {
     display: flex;
+    position:sticky;
+    top: 0;
   }
 
   ul {
