--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -26,7 +26,7 @@
     </section>
 
     <div class="article">
-        <div class="sommaire-replie">
+        <div class="sommaire sommaire-replie">
             <details>
                 <summary>
                     <img class="menu" src="/assets/images/icone-menu-lateral.svg"/>
@@ -43,7 +43,7 @@
 
         </div>
 
-        <div class="sommaire-deplie">
+        <div class="sommaire sommaire-deplie">
             <ul>
                 <li class="actif"><a href="#explication">De quoi s'agit-il ?</a></li>
                 <li><a href="#cible">Qui peut utiliser ce service ?</a></li>
