--- a/assets/service.scss
+++ b/assets/service.scss
@@ -7,6 +7,10 @@
   background: #f4f4f4 url("/assets/images/motif-fond-service.png");
   padding: 24px var(--gouttiere);
 
+  @include a-partir-de(xxl) {
+    padding-bottom: 0;
+  }
+
   p {
     margin: 0;
     padding: 0;
@@ -20,6 +24,20 @@
 
   .fil-ariane {
     margin-bottom: 24px;
+  }
+
+  .resume {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+
+    img {
+      display: none;
+      max-width: 588px;
+      @include a-partir-de(xxl) {
+        display: block;
+      }
+    }
   }
 
   h1 {
@@ -49,6 +67,16 @@
   @include a-partir-de(lg) {
     flex-direction: row;
     gap: 32px;
+  }
+
+  & > .contenu {
+    padding: 0 var(--gouttiere);
+    padding-top: 40px;
+
+    @include a-partir-de(lg) {
+      padding-top: 48px;
+      padding-left: 0;
+    }
   }
 }
 
@@ -129,16 +157,19 @@
   width: 300px;
   flex: 0 0 auto;
   align-self: flex-start;
+  margin-top: 40px;
 
   @include a-partir-de(lg) {
     display: flex;
-    position:sticky;
+    position: sticky;
     top: 0;
+    margin-top: 48px;
   }
 
   ul {
     list-style-type: none;
     padding: 0;
+    margin-top: 0;
     margin-left: var(--gouttiere);
 
     li {
@@ -164,19 +195,22 @@
   }
 }
 
-.contenu {
-  padding: 0 var(--gouttiere);
-
-  @include a-partir-de(lg){
-    padding-left: 0;
-  }
-}
-
 .explication {
-  padding: 40px 0 8px;
+  padding: 0 0 8px;
+
+  @include a-partir-de(xxl) {
+    padding-top: 0;
+    h2 {
+      margin-top: 0;
+    }
+  }
 
   img {
     width: 100%;
+
+    @include a-partir-de(xxl) {
+      display: none;
+    }
   }
 
   .bouton {
@@ -184,7 +218,7 @@
     margin-bottom: 0;
     padding: 10px 24px;
 
-    @include a-partir-de(lg){
+    @include a-partir-de(lg) {
       width: fit-content;
     }
   }
