--- a/assets/service.scss
+++ b/assets/service.scss
@@ -306,13 +306,37 @@ h2 {
       width: 320px;
     }
 
-    .illustration {
+    figure {
       display: flex;
-      padding: 26px 22px 0;
+      position: relative;
+      padding: 20px 22px 0;
       background: #f4f4f4;
+      margin: 0;
 
       img {
         width: 100%;
+      }
+
+      figcaption {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        gap: 2px;
+        top: 16px;
+        right: 16px;
+        padding: 2px 8px;
+        line-height: 1.25rem;
+        font-size: 0.75rem;
+        background: #0d0c21;
+        color: white;
+        border-radius: 8px;
+
+        &:before {
+          content:'';
+          background-image: url("/assets/images/icone-ressource.svg");
+          width: 12px;
+          height: 12px;
+        }
       }
     }
 
