Ajoute les tags pour les sources du service
... dans le sommaire deplié

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -56,6 +56,12 @@
                 <li><a href="#cible">Qui peut utiliser ce service ?</a></li>
                 <li><a href="#ressources">Les ressources associées</a></li>
             </ul>
+            <span>TAGS</span>
+            <div class="labels">
+                {% for source in page.sources %}
+                <span>{{source}}</span>
+                {% endfor %}
+            </div>
         </div>
 
         <div class="contenu">
