[SOIN] Déplace les styles dans leur propre dossier

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " fr" }}">
-{% include head.html extra-css="/assets/service.css" extra-js="/scripts/service.js" %}
+{% include head.html extra-css="/assets/styles/service.css" extra-js="/scripts/service.js" %}
 <body>
 <main>
     <header id="haut-de-page">
