--- a/assets/styles/service.scss
+++ b/assets/styles/service.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import './responsive';
+@import 'responsive';
 
 .chapeau {
   background: #f4f4f4 url("/assets/images/motif-fond-service.png");
