--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{page.titreHtml}}</title>
-  <link rel="stylesheet" href="{{ "/assets/site.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/fonts.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/styles/site.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/styles/fonts.css" | relative_url }}">
   {% if include.extra-css %}
     <link rel="stylesheet" href="{{ include.extra-css | relative_url }}">
   {% endif %}
