Mutualise la disposition des pages

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -1,54 +1,47 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: " fr" }}">
-{% include head.html extra-css="/assets/styles/service.css" extra-js="/scripts/service.js" %}
-<body>
-<main>
-    <header id="haut-de-page">
-        <nav>
-            <a href="/"><img src="/assets/images/marianne-dark.svg" class="marianne"/></a>
-            <button class="menu">
-                <img src="/assets/images/icone-menu.svg"/>
-            </button>
-        </nav>
-    </header>
-    <section class="chapeau">
-        <div class="fil-ariane">
-            <a href="/">Accueil</a>
-            <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-            <a href="/services">Les services et ressources cyber</a>
-            <span><img src="/assets/images/icone-chevron-droite.svg"/></span>
-            <span>{{page.nomDuService}}</span>
-        </div>
-        <div class="resume">
-            <div>
-                <span class="badge service">Service</span>
-                <h1>{{page.nomDuService}}</h1>
-                <p>{{page.descriptionService}}</p>
-                <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
-            </div>
-            <div>
-                <img src="/assets/images/illustrations-services/{{ page.illustration }}"/>
-            </div>
-        </div>
-    </section>
+---
+layout: defaut
+style: /assets/styles/service.css
+script: /scripts/service.js
+---
 
-    <div class="article">
-        <div class="sommaire sommaire-replie">
-            <details>
-                <summary>
-                    <img class="menu" src="/assets/images/icone-menu-lateral.svg"/>
-                    <span id="section-active">De quoi s'agit-il ?</span>
-                    <img class="chevron" src="/assets/images/icone-chevron-bas.svg"/>
-                </summary>
-
-                <ul>
-                    <li class="actif"><a href="#explication">De quoi s'agit-il ?</a></li>
-                    <li><a href="#cible">Qui peut utiliser ce service ?</a></li>
-                    <li><a href="#ressources">Les ressources associées</a></li>
-                </ul>
-            </details>
-
+<section class="chapeau">
+    <div class="fil-ariane">
+        <a href="/">Accueil</a>
+        <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
+        <a href="/services">Les services et ressources cyber</a>
+        <span><img src="/assets/images/icone-chevron-droite.svg"/></span>
+        <span>{{page.nomDuService}}</span>
+    </div>
+    <div class="resume">
+        <div>
+            <span class="badge service">Service</span>
+            <h1>{{page.nomDuService}}</h1>
+            <p>{{page.descriptionService}}</p>
+            <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
         </div>
+        <div>
+            <img src="/assets/images/illustrations-services/{{ page.illustration }}"/>
+        </div>
+    </div>
+</section>
+
+<div class="article">
+    <div class="sommaire sommaire-replie">
+        <details>
+            <summary>
+                <img class="menu" src="/assets/images/icone-menu-lateral.svg"/>
+                <span id="section-active">De quoi s'agit-il ?</span>
+                <img class="chevron" src="/assets/images/icone-chevron-bas.svg"/>
+            </summary>
+
+            <ul>
+                <li class="actif"><a href="#explication">De quoi s'agit-il ?</a></li>
+                <li><a href="#cible">Qui peut utiliser ce service ?</a></li>
+                <li><a href="#ressources">Les ressources associées</a></li>
+            </ul>
+        </details>
+
+    </div>
 
         <div class="sommaire sommaire-deplie">
             <ul>
@@ -64,69 +57,64 @@
             </div>
         </div>
 
-        <div class="contenu">
-            <section class="explication" id="explication">
-                <img src="/assets/images/illustrations-services/{{ page.illustration }}"/>
-                <h2>De quoi s'agit-il ?</h2>
-                <span>{{ page.content }}</span>
-                <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
-            </section>
+    <div class="contenu">
+        <section class="explication" id="explication">
+            <img src="/assets/images/illustrations-services/{{ page.illustration }}"/>
+            <h2>De quoi s'agit-il ?</h2>
+            <span>{{ page.content }}</span>
+            <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
+        </section>
 
-            <section class="cible" id="cible">
-                <h2>Qui peut utiliser ce service ?</h2>
-                <span>{{ page.cibleService }}</span>
+        <section class="cible" id="cible">
+            <h2>Qui peut utiliser ce service ?</h2>
+            <span>{{ page.cibleService }}</span>
 
-                <div class="cartes">
-                    {% for lien in page.liens %}
-                    <div class="carte">
-                        <div class="illustration" style="background-color: {{lien.couleurFond}}">
-                            <img src="/assets/images/illustrations-services/{{ lien.illustration }}">
-                        </div>
-                        <a href="{{ lien.lien }}" target="_blank">{{ lien.titre }}</a>
+            <div class="cartes">
+                {% for lien in page.liens %}
+                <div class="carte">
+                    <div class="illustration" style="background-color: {{lien.couleurFond}}">
+                        <img src="/assets/images/illustrations-services/{{ lien.illustration }}">
                     </div>
-                    {% endfor %}
+                    <a href="{{ lien.lien }}" target="_blank">{{ lien.titre }}</a>
                 </div>
-            </section>
+                {% endfor %}
+            </div>
+        </section>
 
-            <section class="ressources" id="ressources">
-                <h2>Les ressources associées</h2>
-                {% for ressource in page.ressources %}
-                <div class="ressource">
-                    <figure>
+        <section class="ressources" id="ressources">
+            <h2>Les ressources associées</h2>
+            {% for ressource in page.ressources %}
+            <div class="ressource">
+                <figure>
                         <img src="/assets/images/illustrations-services/{{ressource.illustration}}">
                         <figcaption>{{ressource.type}}</figcaption>
                     </figure>
-                    <div class="contenu">
-                        <h3>{{ressource.titre}}</h3>
-                        <span>{{ressource.description}}</span>
-                        <a href="{{ressource.lien}}">Découvrir le service
-                            <img src="/assets/images/icone-fleche-droite.svg">
-                        </a>
-                        <div class="labels">
-                            {% for label in ressource.labels %}
-                            <span>{{label}}</span>
-                            {% endfor %}
-                        </div>
+                <div class="contenu">
+                    <h3>{{ressource.titre}}</h3>
+                    <span>{{ressource.description}}</span>
+                    <a href="{{ressource.lien}}">Découvrir le service
+                        <img src="/assets/images/icone-fleche-droite.svg">
+                    </a>
+                    <div class="labels">
+                        {% for label in ressource.labels %}
+                        <span>{{label}}</span>
+                        {% endfor %}
                     </div>
                 </div>
-                {% endfor %}
-            </section>
+            </div>
+            {% endfor %}
+        </section>
 
-            <section class="haut-de-page">
-                <a href="#haut-de-page">Haut de page</a>
-            </section>
-        </div>
+        <section class="haut-de-page">
+            <a href="#haut-de-page">Haut de page</a>
+        </section>
     </div>
+</div>
 
-    <footer>
-        <a href="#">Plan du site</a>
-        <a href="#">Mentions légales</a>
-        <a href="#">Politique de confidentialité</a>
-        <a href="#">Conditions générales</a>
-        <a href="#">Statistiques d'utilisation</a>
-    </footer>
-
-</main>
-
-</body>
-</html>
+<footer>
+    <a href="#">Plan du site</a>
+    <a href="#">Mentions légales</a>
+    <a href="#">Politique de confidentialité</a>
+    <a href="#">Conditions générales</a>
+    <a href="#">Statistiques d'utilisation</a>
+</footer>
