--- a/_layouts/defaut.html
+++ b/_layouts/defaut.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: " fr" }}">
-
-{%- include head.html -%}
-
+<html lang="{{ page.lang | default: site.lang | default: 'fr' }}">
+{% include head.html extra-css=layout.style extra-js=layout.script %}
 <body>
-
-{{ content }}
-
+<main>
+    {% include header.html %}
+    {{ content }}
+</main>
 </body>
 
 </html>
