--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -17,7 +17,7 @@ script: /scripts/service.js
             <span class="badge service">Service</span>
             <h1>{{page.nomDuService}}</h1>
             <p>{{page.descriptionService}}</p>
-            <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
+            <a href="{{page.lienService}}" target="_blank" class="bouton primaire">Accéder au service</a>
         </div>
         <div>
             <img src="/assets/images/illustrations-services/{{ page.illustration }}"/>
@@ -62,7 +62,7 @@ script: /scripts/service.js
             <img src="/assets/images/illustrations-services/{{ page.illustration }}"/>
             <h2>De quoi s'agit-il ?</h2>
             <span>{{ page.content }}</span>
-            <a href="{{page.lienService}}" target="_blank" class="bouton">Accéder au service</a>
+            <a href="{{page.lienService}}" target="_blank" class="bouton primaire">Accéder au service</a>
         </section>
 
         <section class="cible" id="cible">
